--- a/noel.html
+++ b/noel.html
@@ -488,19 +488,19 @@
             requestAnimationFrame(animate);
         }
 
-        // Snowflakes
+        // Snowflakes - MORE and BIGGER
         let snowflakes = [];
 
         function initSnowflakes() {
             snowflakes = [];
-            for (let i = 0; i < 150; i++) {
+            for (let i = 0; i < 300; i++) {
                 snowflakes.push({
                     x: Math.random() * width,
                     y: Math.random() * height,
-                    size: 1 + Math.random() * 3,
-                    speed: 0.5 + Math.random() * 1.5,
-                    wind: (Math.random() - 0.5) * 0.5,
-                    opacity: 0.3 + Math.random() * 0.7
+                    size: 2 + Math.random() * 4,
+                    speed: 1 + Math.random() * 3,
+                    wind: (Math.random() - 0.5) * 1,
+                    opacity: 0.5 + Math.random() * 0.5
                 });
             }
         }
@@ -509,7 +509,7 @@
         function drawSnowflakes() {
             snowflakes.forEach(flake => {
                 flake.y += flake.speed;
-                flake.x += flake.wind + Math.sin(flake.y * 0.01) * 0.3;
+                flake.x += flake.wind + Math.sin(flake.y * 0.01) * 0.5;
 
                 if (flake.y > height) {
                     flake.y = -10;
@@ -525,167 +525,157 @@
             });
         }
 
-        // Reindeer with sleigh
-        let reindeer = {
-            x: -300,
-            y: height * 0.15,
-            speed: 2,
-            visible: true,
-            lastSpawn: 0
-        };
+        // Multiple Reindeers with sleighs
+        let reindeers = [
+            { x: 0, y: 60, speed: 3.5 },
+            { x: -500, y: 120, speed: 2.5 },
+            { x: -1000, y: 180, speed: 4 }
+        ];
 
         function drawReindeer(time) {
-            // Spawn new reindeer continuously (every 3 seconds after leaving screen)
-            if (!reindeer.visible || time - reindeer.lastSpawn > 3000) {
-                if (reindeer.x > width + 300 || !reindeer.visible) {
-                    reindeer.x = -300;
-                    reindeer.y = 50 + Math.random() * (height * 0.25);
-                    reindeer.speed = 2 + Math.random() * 2;
-                    reindeer.visible = true;
-                    reindeer.lastSpawn = time;
+            reindeers.forEach((reindeer, index) => {
+                // Respawn when off screen
+                if (reindeer.x > width + 300) {
+                    reindeer.x = -400 - Math.random() * 300;
+                    reindeer.y = 40 + index * 60 + Math.random() * 30;
+                    reindeer.speed = 2 + Math.random() * 2.5;
                 }
-            }
 
-            if (!reindeer.visible) return;
+                reindeer.x += reindeer.speed;
+                const bobY = Math.sin(time * 0.003 + index) * 8;
 
-            reindeer.x += reindeer.speed;
-            const bobY = Math.sin(time * 0.003) * 10;
+                // Draw sleigh trail (magic dust)
+                for (let i = 0; i < 6; i++) {
+                    const trailX = reindeer.x - 80 - i * 15;
+                    const trailY = reindeer.y + bobY + 30 + Math.random() * 8;
+                    const trailOpacity = (6 - i) / 6 * 0.4;
 
-            // Draw sleigh trail (magic dust)
-            for (let i = 0; i < 8; i++) {
-                const trailX = reindeer.x - 80 - i * 20;
-                const trailY = reindeer.y + bobY + 30 + Math.random() * 10;
-                const trailOpacity = (8 - i) / 8 * 0.5;
+                    ctx.beginPath();
+                    ctx.arc(trailX, trailY, 1.5 + Math.random() * 2, 0, Math.PI * 2);
+                    ctx.fillStyle = `rgba(255, 215, 0, ${trailOpacity})`;
+                    ctx.fill();
+                }
+
+                ctx.save();
+                ctx.translate(reindeer.x, reindeer.y + bobY);
+
+                // Draw reindeer silhouette
+                ctx.fillStyle = '#1a1a1a';
+                ctx.strokeStyle = 'rgba(255, 200, 100, 0.3)';
+                ctx.lineWidth = 1;
+
+                // Body
+                ctx.beginPath();
+                ctx.ellipse(0, 25, 25, 15, 0, 0, Math.PI * 2);
+                ctx.fill();
+                ctx.stroke();
+
+                // Head
+                ctx.beginPath();
+                ctx.ellipse(30, 15, 12, 10, 0.3, 0, Math.PI * 2);
+                ctx.fill();
+                ctx.stroke();
+
+                // Antlers
+                ctx.strokeStyle = 'rgba(255, 200, 100, 0.5)';
+                ctx.lineWidth = 2;
+                ctx.beginPath();
+                ctx.moveTo(35, 5);
+                ctx.lineTo(45, -10);
+                ctx.lineTo(50, -5);
+                ctx.moveTo(45, -10);
+                ctx.lineTo(55, -15);
+                ctx.stroke();
 
                 ctx.beginPath();
-                ctx.arc(trailX, trailY, 2 + Math.random() * 2, 0, Math.PI * 2);
-                ctx.fillStyle = `rgba(255, 215, 0, ${trailOpacity})`;
+                ctx.moveTo(30, 5);
+                ctx.lineTo(35, -12);
+                ctx.lineTo(42, -8);
+                ctx.moveTo(35, -12);
+                ctx.lineTo(40, -18);
+                ctx.stroke();
+
+                // Red nose glow
+                const noseGlow = ctx.createRadialGradient(42, 15, 0, 42, 15, 15);
+                noseGlow.addColorStop(0, 'rgba(255, 50, 50, 0.8)');
+                noseGlow.addColorStop(0.5, 'rgba(255, 0, 0, 0.3)');
+                noseGlow.addColorStop(1, 'rgba(255, 0, 0, 0)');
+                ctx.fillStyle = noseGlow;
+                ctx.beginPath();
+                ctx.arc(42, 15, 15, 0, Math.PI * 2);
                 ctx.fill();
-            }
 
-            ctx.save();
-            ctx.translate(reindeer.x, reindeer.y + bobY);
+                // Red nose
+                ctx.fillStyle = '#ff3333';
+                ctx.beginPath();
+                ctx.arc(42, 15, 4, 0, Math.PI * 2);
+                ctx.fill();
 
-            // Draw reindeer silhouette
-            ctx.fillStyle = '#1a1a1a';
-            ctx.strokeStyle = 'rgba(255, 200, 100, 0.3)';
-            ctx.lineWidth = 1;
+                // Legs
+                ctx.strokeStyle = '#1a1a1a';
+                ctx.lineWidth = 4;
+                const legOffset = Math.sin(time * 0.01 + index) * 5;
+                ctx.beginPath();
+                ctx.moveTo(-10, 35);
+                ctx.lineTo(-15, 50 + legOffset);
+                ctx.moveTo(5, 35);
+                ctx.lineTo(0, 50 - legOffset);
+                ctx.moveTo(-5, 35);
+                ctx.lineTo(-8, 50 - legOffset);
+                ctx.moveTo(10, 35);
+                ctx.lineTo(12, 50 + legOffset);
+                ctx.stroke();
 
-            // Body
-            ctx.beginPath();
-            ctx.ellipse(0, 25, 25, 15, 0, 0, Math.PI * 2);
-            ctx.fill();
-            ctx.stroke();
+                // Sleigh
+                ctx.fillStyle = '#8b0000';
+                ctx.beginPath();
+                ctx.moveTo(-70, 30);
+                ctx.quadraticCurveTo(-90, 30, -95, 45);
+                ctx.lineTo(-30, 45);
+                ctx.lineTo(-25, 30);
+                ctx.closePath();
+                ctx.fill();
+                ctx.strokeStyle = 'rgba(255, 215, 0, 0.5)';
+                ctx.lineWidth = 1;
+                ctx.stroke();
 
-            // Head
-            ctx.beginPath();
-            ctx.ellipse(30, 15, 12, 10, 0.3, 0, Math.PI * 2);
-            ctx.fill();
-            ctx.stroke();
+                // Santa in sleigh
+                ctx.fillStyle = '#cc0000';
+                ctx.beginPath();
+                ctx.ellipse(-60, 25, 12, 15, 0, 0, Math.PI * 2);
+                ctx.fill();
 
-            // Antlers
-            ctx.strokeStyle = 'rgba(255, 200, 100, 0.5)';
-            ctx.lineWidth = 2;
-            ctx.beginPath();
-            ctx.moveTo(35, 5);
-            ctx.lineTo(45, -10);
-            ctx.lineTo(50, -5);
-            ctx.moveTo(45, -10);
-            ctx.lineTo(55, -15);
-            ctx.stroke();
+                // Santa head
+                ctx.fillStyle = '#ffdbac';
+                ctx.beginPath();
+                ctx.arc(-60, 10, 8, 0, Math.PI * 2);
+                ctx.fill();
 
-            ctx.beginPath();
-            ctx.moveTo(30, 5);
-            ctx.lineTo(35, -12);
-            ctx.lineTo(42, -8);
-            ctx.moveTo(35, -12);
-            ctx.lineTo(40, -18);
-            ctx.stroke();
+                // Santa hat
+                ctx.fillStyle = '#cc0000';
+                ctx.beginPath();
+                ctx.moveTo(-68, 8);
+                ctx.lineTo(-60, -8);
+                ctx.lineTo(-52, 8);
+                ctx.closePath();
+                ctx.fill();
 
-            // Red nose glow
-            const noseGlow = ctx.createRadialGradient(42, 15, 0, 42, 15, 15);
-            noseGlow.addColorStop(0, 'rgba(255, 50, 50, 0.8)');
-            noseGlow.addColorStop(0.5, 'rgba(255, 0, 0, 0.3)');
-            noseGlow.addColorStop(1, 'rgba(255, 0, 0, 0)');
-            ctx.fillStyle = noseGlow;
-            ctx.beginPath();
-            ctx.arc(42, 15, 15, 0, Math.PI * 2);
-            ctx.fill();
+                // Hat pom
+                ctx.fillStyle = '#fff';
+                ctx.beginPath();
+                ctx.arc(-60, -8, 4, 0, Math.PI * 2);
+                ctx.fill();
 
-            // Red nose
-            ctx.fillStyle = '#ff3333';
-            ctx.beginPath();
-            ctx.arc(42, 15, 4, 0, Math.PI * 2);
-            ctx.fill();
+                // Reins
+                ctx.strokeStyle = 'rgba(139, 69, 19, 0.6)';
+                ctx.lineWidth = 1;
+                ctx.beginPath();
+                ctx.moveTo(-30, 30);
+                ctx.quadraticCurveTo(0, 35, 20, 20);
+                ctx.stroke();
 
-            // Legs
-            ctx.strokeStyle = '#1a1a1a';
-            ctx.lineWidth = 4;
-            const legOffset = Math.sin(time * 0.01) * 5;
-            ctx.beginPath();
-            ctx.moveTo(-10, 35);
-            ctx.lineTo(-15, 50 + legOffset);
-            ctx.moveTo(5, 35);
-            ctx.lineTo(0, 50 - legOffset);
-            ctx.moveTo(-5, 35);
-            ctx.lineTo(-8, 50 - legOffset);
-            ctx.moveTo(10, 35);
-            ctx.lineTo(12, 50 + legOffset);
-            ctx.stroke();
-
-            // Sleigh
-            ctx.fillStyle = '#8b0000';
-            ctx.beginPath();
-            ctx.moveTo(-70, 30);
-            ctx.quadraticCurveTo(-90, 30, -95, 45);
-            ctx.lineTo(-30, 45);
-            ctx.lineTo(-25, 30);
-            ctx.closePath();
-            ctx.fill();
-            ctx.strokeStyle = 'rgba(255, 215, 0, 0.5)';
-            ctx.lineWidth = 1;
-            ctx.stroke();
-
-            // Santa in sleigh
-            ctx.fillStyle = '#cc0000';
-            ctx.beginPath();
-            ctx.ellipse(-60, 25, 12, 15, 0, 0, Math.PI * 2);
-            ctx.fill();
-
-            // Santa head
-            ctx.fillStyle = '#ffdbac';
-            ctx.beginPath();
-            ctx.arc(-60, 10, 8, 0, Math.PI * 2);
-            ctx.fill();
-
-            // Santa hat
-            ctx.fillStyle = '#cc0000';
-            ctx.beginPath();
-            ctx.moveTo(-68, 8);
-            ctx.lineTo(-60, -8);
-            ctx.lineTo(-52, 8);
-            ctx.closePath();
-            ctx.fill();
-
-            // Hat pom
-            ctx.fillStyle = '#fff';
-            ctx.beginPath();
-            ctx.arc(-60, -8, 4, 0, Math.PI * 2);
-            ctx.fill();
-
-            // Reins
-            ctx.strokeStyle = 'rgba(139, 69, 19, 0.6)';
-            ctx.lineWidth = 1;
-            ctx.beginPath();
-            ctx.moveTo(-30, 30);
-            ctx.quadraticCurveTo(0, 35, 20, 20);
-            ctx.stroke();
-
-            ctx.restore();
-
-            if (reindeer.x > width + 300) {
-                reindeer.visible = false;
-            }
+                ctx.restore();
+            });
         }
 
         // Mouse tracking
